# robots_txt

./: .travis.yml  COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs  matcher.rs  parse.rs  prelude.rs  render.rs
src/builder/: mod.rs  robots.rs  section.rs
src/parts/: mod.rs  request_rate.rs  robots.rs  rule.rs  section.rs
