[package]
name = "robots_txt"
version = "0.7.0"
authors = ["Alexander Irbis <irbis.labs@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A lightweight parser and generator for robots.txt."
keywords = ["robots", "robots-txt", "sitemap", "web"]
categories = ["parser-implementations", "web-programming"]
readme = "README.md"
homepage = "https://github.com/alexander-irbis/robots_txt"
repository = "https://github.com/alexander-irbis/robots_txt"
documentation = "https://docs.rs/robots_txt/"
exclude = [
    ".gitignore",
    ".travis.yml",
    "appveyor.yml",
]
publish = true
edition = "2018"

[badges]
travis-ci = { repository = "alexander-irbis/robots_txt" }

[dependencies]
unicase = "2.6"
url = "2.0"

[features]
default     = ["release"]
release     = []
